# marray

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  genindex.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js  tutorial.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml  docs-build.yml  docs-deploy.yml  nightly.yml  pypi.yml
_sources/: intro.md  tutorial.md
ci/: install-nightly-wheels.sh  xp-tests-xfails.txt  xp-tests.patch
ci/requirements/: environment.txt
docs/: _config.yml  _toc.yml  intro.md  tutorial.ipynb  tutorial.md  tutorial.py
docs/static/: tutorial.html
marray/: __init__.py  _mask_string.py  _mask_text.py  formatting.py
marray/tests/: test_bench.py  test_formatting.py  test_marray.py
mybook/: _config.yml  _toc.yml  intro.md  tutorial.md
tools/: xp-tests-xfails.txt  xp-tests.patch
